...
            "state" : "translated",
            "value" : "支持 Torrent 需要 aria2"
          }
        }
      }
    },
    "Automatically check for updates" : {
      "comment" : "A toggle that enables or disables automatic checking for updates.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "已取消的项目会保留在历史记录中，直到你将其手动移除。"
          }
        }
      }
    },
    "Check for Updates…" : {
      "comment" : "A button that checks for updates to the app.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "点击任意一行，即可查看任务进度、下载速度、文件保存位置以及恢复操作选项。"
          }
        }
      }
    },
    "Choose…" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Elegir…"
          }
...
            "state" : "translated",
            "value" : "下载"
          }
        }
      }
    },
    "Downloads" : {
      "comment" : "A menu that allows the user to interact with their download list.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "显示"
          }
        }
      }
    },
    "Reveal in Finder" : {
      "comment" : "A button that reveals a file in the Finder.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "更新"
          }
        }
      }
    },
    "Updates" : {
      "comment" : "A section in the settings view that allows the user to check for and install app updates.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
...
